refactor: move files and use "discord-html-transcript-core:0.1.0-beta.1"